@@ -1,3 +1,5 @@
+ - allow interactive::gtk frontends to ask for a directory
+
 Version 10.4.221 - 28 September 2007, by Olivier "blino" Blin
 
 - add back ipw3945 module in wireless modules list
